--- a/studyapi.ini
+++ b/studyapi.ini
@@ -7,3 +7,17 @@ processes=4
 socket  =127.0.0.1:9090
 chmod-socket = 666
 vacuum = true
+
+
+server{
+                                listen          80;
+                                server_name     139.224.209.63;
+                                charset         utf-8;
+
+
+                                location / {
+                                        root    /var/www/studyapi/study;
+                                        index   index.html ;
+                                }
+
+}
