--- a/azraelhtml/package.json
+++ b/azraelhtml/package.json
@@ -7,7 +7,9 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@kangc/v-md-editor": "^1.7.11",
     "core-js": "^3.18.0",
+    "highlight.js": "^11.7.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
