--- a/azraelhtml/package.json
+++ b/azraelhtml/package.json
@@ -10,6 +10,8 @@
     "@kangc/v-md-editor": "^1.7.11",
     "core-js": "^3.18.0",
     "highlight.js": "^11.7.0",
+    "node-sass": "^8.0.0",
+    "sass-loader": "^10.1.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
@@ -20,6 +22,7 @@
     "@vue/cli-plugin-vuex": "^4.4.6",
     "@vue/cli-service": "~4.4.0",
     "axios": "^0.19.2",
+    "babel-plugin-prismjs": "^2.1.0",
     "bootstrap": "^4.5.0",
     "element-ui": "^2.13.2",
     "jquery": "^3.5.1",
