--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -16,6 +16,7 @@
     "element-plus": "^2.2.30",
     "pinia": "^2.0.28",
     "prismjs": "^1.29.0",
+    "sass": "^1.62.0",
     "vue": "^3.2.38",
     "vue-router": "^4.1.6"
   },
